# clutterrific

./: .gitignore  AUTHORS  README  TODO  autogen.sh  configure.ac
data/: Makefile.am  the-poet.font
src/: .gitignore  Makefile  Makefile.am  clutterrific.c  clutterrific.h  cube-twist.c  cube-twist.desktop  cube-twist.desktop.in  cube-twister.c  cube-twister.desktop  cube.c  flip-clock.c  flip-clock.desktop.in  glow-clock.c  glow-clock.desktop  glow-clock.desktop.in  memorrific.c  memorrific.c.old  memorrific.desktop.in  photofall.c  photofall.desktop.in  photofall.old  the-poet-draw.py  the-poet-scan.py  the-poet.c  the-poet.desktop.in
src/clock/: Makefile  clock.c
src/cube/: Makefile  cube.c
src/poem/: .gitignore  Makefile  poem.c
src/test/: Makefile  test.c
